--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "waigo-admin",
-  "version": "1.1.1",
-  "description": "Administration UI for Waigo",
+  "name": "waigo-plugin-admin",
+  "version": "1.0.0",
+  "description": "Administration UI for Waigo apps (plugin)",
   "main": "index.js",
   "repository": {
     "type": "git",
